# SIFT

./: CMakeLists.txt  SIFT.cpp  main.cpp  readme.md
include/: SIFT.h
